--- a/public/index.html
+++ b/public/index.html
@@ -71,15 +71,14 @@ body{
 /* ================= APP ================= */
 
 #app{
-  display:none;
+  display:none;           /* hidden by default */
   width:95%;
   max-width:700px;
   height:95vh;
   background:var(--text);
   border-radius:18px;
   overflow:hidden;
-  display:flex;
-  flex-direction:column;
+  flex-direction:column;  /* flex ONLY when shown */
   box-shadow:0 0 25px rgba(0,0,0,.6);
 }
 
@@ -212,6 +211,7 @@ loginBtn.onclick=()=>{
   if(user.value===USER && pass.value===PASS){
     login.style.display="none";
     app.style.display="flex";
+    input.focus();
     load();
   }else{
     error.innerText="❌ Wrong Login";
