--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#00054c">
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Spark AI</title>
@@ -326,6 +329,14 @@ add("Hello! I am Spark AI ⚡","bot");
 
 });
 </script>
-
+  <script>
+if ("serviceWorker" in navigator) {
+  window.addEventListener("load", () => {
+    navigator.serviceWorker.register("/sw.js")
+      .then(() => console.log("✅ Service Worker registered"))
+      .catch(err => console.log("❌ SW failed", err));
+  });
+}
+</script>
 </body>
 </html>
