--- a/public/index.html
+++ b/public/index.html
@@ -204,20 +204,22 @@ footer button{
 
 <script>
 document.addEventListener("DOMContentLoaded",()=>{
+let CURRENT_USER = "";
+
 
 /* =============== LOGIN =============== */
 
 const USER="admin";
 const PASS="Pranavam21@";
 
-loginBtn.onclick=()=>{
-  if(user.value===USER && pass.value===PASS){
-    login.style.display="none";
-    app.style.display="flex";
-    input.focus();
-    load();
-  }else{
-    error.innerText="❌ Wrong Login";
+loginBtn.onclick = () => {
+  if (user.value === USER && pass.value === PASS) {
+    CURRENT_USER = user.value;   // 👈 ADD THIS
+    login.style.display = "none";
+    app.style.display = "flex";
+    load();                      // load chat history
+  } else {
+    error.innerText = "❌ Wrong Login";
   }
 };
 
@@ -248,8 +250,8 @@ function add(text,type){
   save(text,type);
 }
 
-async function sendMessage(){
-  const text=input.value.trim();
+async function send(){
+  const text = input.value.trim();
   if(!text) return;
 
   add(text,"user");
@@ -257,15 +259,20 @@ async function sendMessage(){
   add("Typing...","bot");
 
   try{
-    const r=await fetch("/chat",{
-      method:"POST",
-      headers:{"Content-Type":"application/json"},
-      body:JSON.stringify({message:text})
+    const r = await fetch("/chat", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        user: CURRENT_USER,   // 👈 SEND USERNAME
+        message: text
+      })
     });
-    const d=await r.json();
+
+    const d = await r.json();
     messages.lastChild.remove();
     add(d.reply,"bot");
-  }catch{
+
+  } catch {
     messages.lastChild.remove();
     add("❌ Server error","bot");
   }
@@ -309,9 +316,13 @@ function save(t,t2){
   localStorage.setItem("spark",JSON.stringify(h));
 }
 
-function load(){
-  const h=JSON.parse(localStorage.getItem("spark")||"[]");
-  h.forEach(m=>add(m.t,m.t2));
+async function load(){
+  const r = await fetch(`/history/${CURRENT_USER}`);
+  const h = await r.json();
+  messages.innerHTML = "";
+  h.forEach(m => {
+    add(m.content, m.role === "assistant" ? "bot" : "user");
+  });
 }
 
 /* =============== CLEAR =============== */
