--- a/public/index.html
+++ b/public/index.html
@@ -250,7 +250,7 @@ function add(text,type){
   save(text,type);
 }
 
-async function send(){
+async function sendMessage(){
   const text = input.value.trim();
   if(!text) return;
 
