--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#00054c">
 
 <meta charset="UTF-8">
@@ -12,159 +12,159 @@
 /* ================= THEME ================= */
 
 :root{
---bg:#00054c;          /* Spark logo background */
---card:#020617;
---text:#ffffff;
---user:#2563eb;
---bot:#1e293b;
+  --bg:#00054c;          /* Spark logo background */
+  --card:#020617;
+  --text:#ffffff;
+  --user:#2563eb;
+  --bot:#1e293b;
 }
 
 body{
-margin:0;
-font-family:Arial, Helvetica, sans-serif;
-background:var(--bg);
-display:flex;
-justify-content:center;
-align-items:center;
-height:100vh;
-color:var(--text);
+  margin:0;
+  font-family:Arial, Helvetica, sans-serif;
+  background:var(--bg);
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  height:100vh;
+  color:var(--text);
 }
 
 /* ================= LOGIN ================= */
 
 #login{
-background:var(--card);
-padding:30px;
-width:320px;
-border-radius:15px;
-text-align:center;
-box-shadow:0 0 25px rgba(0,0,0,.5);
+  background:var(--card);
+  padding:30px;
+  width:320px;
+  border-radius:15px;
+  text-align:center;
+  box-shadow:0 0 25px rgba(0,0,0,.5);
 }
 
 #login h2{
-margin-bottom:20px;
+  margin-bottom:20px;
 }
 
 #login input{
-width:100%;
-padding:10px;
-margin:8px 0;
-border-radius:8px;
-border:none;
-outline:none;
+  width:100%;
+  padding:10px;
+  margin:8px 0;
+  border-radius:8px;
+  border:none;
+  outline:none;
 }
 
 #login button{
-width:100%;
-padding:10px;
-background:#2563eb;
-color:white;
-border:none;
-border-radius:8px;
-cursor:pointer;
-font-size:16px;
+  width:100%;
+  padding:10px;
+  background:#2563eb;
+  color:white;
+  border:none;
+  border-radius:8px;
+  cursor:pointer;
+  font-size:16px;
 }
 
 #error{
-color:#ff6b6b;
-font-size:12px;
-margin-top:8px;
+  color:#ff6b6b;
+  font-size:12px;
+  margin-top:8px;
 }
 
 /* ================= APP ================= */
 
 #app{
-display:none;           /* hidden by default */
-width:95%;
-max-width:700px;
-height:95vh;
-background:var(--text);
-border-radius:18px;
-overflow:hidden;
-flex-direction:column;  /* flex ONLY when shown */
-box-shadow:0 0 25px rgba(0,0,0,.6);
+  display:none;           /* hidden by default */
+  width:95%;
+  max-width:700px;
+  height:95vh;
+  background:var(--text);
+  border-radius:18px;
+  overflow:hidden;
+  flex-direction:column;  /* flex ONLY when shown */
+  box-shadow:0 0 25px rgba(0,0,0,.6);
 }
 
 header{
-background:linear-gradient(90deg,#00054c,#020617);
-color:white;
-padding:12px 15px;
-display:flex;
-justify-content:space-between;
-align-items:center;
-font-weight:bold;
+  background:linear-gradient(90deg,#00054c,#020617);
+  color:white;
+  padding:12px 15px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  font-weight:bold;
 }
 
 header button{
-background:none;
-border:none;
-color:white;
-font-size:18px;
-cursor:pointer;
+  background:none;
+  border:none;
+  color:white;
+  font-size:18px;
+  cursor:pointer;
 }
 
 /* ================= CHAT ================= */
 
 #messages{
-flex:1;
-overflow-y:auto;
-padding:12px;
+  flex:1;
+  overflow-y:auto;
+  padding:12px;
 }
 
 .msg{
-margin:10px 0;
-padding:10px 12px;
-border-radius:12px;
-max-width:75%;
-display:flex;
-align-items:center;
-gap:6px;
-line-height:1.4;
+  margin:10px 0;
+  padding:10px 12px;
+  border-radius:12px;
+  max-width:75%;
+  display:flex;
+  align-items:center;
+  gap:6px;
+  line-height:1.4;
 }
 
 .user{
-background:var(--user);
-color:white;
-margin-left:auto;
+  background:var(--user);
+  color:white;
+  margin-left:auto;
 }
 
 .bot{
-background:var(--bot);
+  background:var(--bot);
 }
 
 .msg button{
-font-size:12px;
-padding:2px 6px;
-border:none;
-border-radius:6px;
-cursor:pointer;
+  font-size:12px;
+  padding:2px 6px;
+  border:none;
+  border-radius:6px;
+  cursor:pointer;
 }
 
 /* ================= INPUT ================= */
 
 footer{
-display:flex;
-gap:6px;
-padding:8px;
-border-top:1px solid #1e293b;
+  display:flex;
+  gap:6px;
+  padding:8px;
+  border-top:1px solid #1e293b;
 }
 
 footer input{
-flex:1;
-padding:10px;
-border-radius:10px;
-border:none;
-outline:none;
+  flex:1;
+  padding:10px;
+  border-radius:10px;
+  border:none;
+  outline:none;
 }
 
 footer button{
-padding:0 14px;
-background:#2563eb;
-color:white;
-border:none;
-border-radius:10px;
-cursor:pointer;
-font-size:16px;
+  padding:0 14px;
+  background:#2563eb;
+  color:white;
+  border:none;
+  border-radius:10px;
+  cursor:pointer;
+  font-size:16px;
 }
 </style>
 </head>
@@ -174,11 +174,11 @@ font-size:16px;
 <!-- ================= LOGIN ================= -->
 
 <div id="login">
-<h2>⚡ Spark AI</h2>
-<input id="user" placeholder="Username">
-<input id="pass" type="password" placeholder="Password">
-<button id="loginBtn">Login</button>
-<p id="error"></p>
+  <h2>⚡ Spark AI</h2>
+  <input id="user" placeholder="Username">
+  <input id="pass" type="password" placeholder="Password">
+  <button id="loginBtn">Login</button>
+  <p id="error"></p>
 </div>
 
 <!-- ================= APP ================= -->
@@ -186,41 +186,39 @@ font-size:16px;
 <div id="app">
 
 <header>
-<div>⚡ Spark AI</div>
-<div>
-<button id="clearBtn">🗑️</button>
-</div>
+  <div>⚡ Spark AI</div>
+  <div>
+    <button id="clearBtn">🗑️</button>
+  </div>
 </header>
 
 <div id="messages"></div>
 
 <footer>
-<input id="input" placeholder="Type your message...">
-<button id="send">➤</button>
-<button id="mic">🎤</button>
+  <input id="input" placeholder="Type your message...">
+  <button id="send">➤</button>
+  <button id="mic">🎤</button>
 </footer>
 
 </div>
 
 <script>
 document.addEventListener("DOMContentLoaded",()=>{
-let CURRENT_USER = "";
-
 
 /* =============== LOGIN =============== */
 
 const USER="admin";
 const PASS="Pranavam21@";
 
-loginBtn.onclick = () => {
-if (user.value === USER && pass.value === PASS) {
-CURRENT_USER = user.value;   // 👈 ADD THIS
-login.style.display = "none";
-app.style.display = "flex";
-load();                      // load chat history
-} else {
-error.innerText = "❌ Wrong Login";
-}
+loginBtn.onclick=()=>{
+  if(user.value===USER && pass.value===PASS){
+    login.style.display="none";
+    app.style.display="flex";
+    input.focus();
+    load();
+  }else{
+    error.innerText="❌ Wrong Login";
+  }
 };
 
 /* =============== CHAT =============== */
@@ -229,54 +227,48 @@ const messages=document.getElementById("messages");
 const input=document.getElementById("input");
 
 function add(text,type){
-const div=document.createElement("div");
-div.className="msg "+type;
-div.innerText=text;
+  const div=document.createElement("div");
+  div.className="msg "+type;
+  div.innerText=text;
 
-if(type==="bot"){
-const speak=document.createElement("button");
-speak.innerText="🔊";
-speak.onclick=()=>tts(text);
+  if(type==="bot"){
+    const speak=document.createElement("button");
+    speak.innerText="🔊";
+    speak.onclick=()=>tts(text);
 
-const copy=document.createElement("button");
-copy.innerText="📋";
-copy.onclick=()=>navigator.clipboard.writeText(text);
+    const copy=document.createElement("button");
+    copy.innerText="📋";
+    copy.onclick=()=>navigator.clipboard.writeText(text);
 
-div.append(speak,copy);
+    div.append(speak,copy);
+  }
+
+  messages.appendChild(div);
+  messages.scrollTop=messages.scrollHeight;
+  save(text,type);
 }
 
-messages.appendChild(div);
-messages.scrollTop=messages.scrollHeight;
-save(text,type);
-}
-
-async function send(){
 async function sendMessage(){
-const text = input.value.trim();
-if(!text) return;
+  const text=input.value.trim();
+  if(!text) return;
 
-add(text,"user");
-input.value="";
-add("Typing...","bot");
+  add(text,"user");
+  input.value="";
+  add("Typing...","bot");
 
-try{
-const r = await fetch("/chat", {
-method: "POST",
-headers: { "Content-Type": "application/json" },
-body: JSON.stringify({
-user: CURRENT_USER,   // 👈 SEND USERNAME
-message: text
-})
-});
-
-const d = await r.json();
-messages.lastChild.remove();
-add(d.reply,"bot");
-
-} catch {
-messages.lastChild.remove();
-add("❌ Server error","bot");
-}
+  try{
+    const r=await fetch("/chat",{
+      method:"POST",
+      headers:{"Content-Type":"application/json"},
+      body:JSON.stringify({message:text})
+    });
+    const d=await r.json();
+    messages.lastChild.remove();
+    add(d.reply,"bot");
+  }catch{
+    messages.lastChild.remove();
+    add("❌ Server error","bot");
+  }
 }
 
 const sendBtn = document.getElementById("send");
@@ -284,55 +276,51 @@ const sendBtn = document.getElementById("send");
 sendBtn.onclick = sendMessage;
 
 input.addEventListener("keydown", e => {
-if (e.key === "Enter") sendMessage();
+  if (e.key === "Enter") sendMessage();
 });
 
 /* =============== VOICE =============== */
 
 let rec;
 try{
-rec=new (SpeechRecognition||webkitSpeechRecognition)();
-rec.lang="en-US";
-mic.onclick=()=>rec.start();
-rec.onresult=e=>{
-input.value=e.results[0][0].transcript;
-};
+  rec=new (SpeechRecognition||webkitSpeechRecognition)();
+  rec.lang="en-US";
+  mic.onclick=()=>rec.start();
+  rec.onresult=e=>{
+    input.value=e.results[0][0].transcript;
+  };
 }catch{
-mic.style.display="none";
+  mic.style.display="none";
 }
 
 /* =============== TTS =============== */
 
 function tts(text){
-speechSynthesis.cancel();
-const u=new SpeechSynthesisUtterance(text);
-speechSynthesis.speak(u);
+  speechSynthesis.cancel();
+  const u=new SpeechSynthesisUtterance(text);
+  speechSynthesis.speak(u);
 }
 
 /* =============== MEMORY =============== */
 
 function save(t,t2){
-const h=JSON.parse(localStorage.getItem("spark")||"[]");
-h.push({t,t2});
-localStorage.setItem("spark",JSON.stringify(h));
+  const h=JSON.parse(localStorage.getItem("spark")||"[]");
+  h.push({t,t2});
+  localStorage.setItem("spark",JSON.stringify(h));
 }
 
-async function load(){
-const r = await fetch(`/history/${CURRENT_USER}`);
-const h = await r.json();
-messages.innerHTML = "";
-h.forEach(m => {
-add(m.content, m.role === "assistant" ? "bot" : "user");
-});
+function load(){
+  const h=JSON.parse(localStorage.getItem("spark")||"[]");
+  h.forEach(m=>add(m.t,m.t2));
 }
 
 /* =============== CLEAR =============== */
 
 clearBtn.onclick=()=>{
-if(confirm("Clear chat?")){
-localStorage.removeItem("spark");
-messages.innerHTML="";
-}
+  if(confirm("Clear chat?")){
+    localStorage.removeItem("spark");
+    messages.innerHTML="";
+  }
 };
 
 /* =============== GREET =============== */
@@ -341,13 +329,14 @@ add("Hello! I am Spark AI ⚡","bot");
 
 });
 </script>
-<script>
+
+  <script>
 if ("serviceWorker" in navigator) {
-window.addEventListener("load", () => {
-navigator.serviceWorker.register("/sw.js")
-.then(() => console.log("✅ Service Worker registered"))
-.catch(err => console.log("❌ SW failed", err));
-});
+  window.addEventListener("load", () => {
+    navigator.serviceWorker.register("/sw.js")
+      .then(() => console.log("✅ Service Worker registered"))
+      .catch(err => console.log("❌ SW failed", err));
+  });
 }
 </script>
 </body>
