--- a/public/index.html
+++ b/public/index.html
@@ -203,6 +203,8 @@ font-size:16px;
 </div>
 
 <script>
+  let CURRENT_USER = "";
+
 document.addEventListener("DOMContentLoaded",()=>{
 
 /* =============== LOGIN =============== */
@@ -212,6 +214,8 @@ const PASS="Pranavam21@";
 
 loginBtn.onclick=()=>{
 if(user.value===USER && pass.value===PASS){
+  CURRENT_USER = user.value;
+
 login.style.display="none";
 app.style.display="flex";
 input.focus();
@@ -260,7 +264,11 @@ try{
 const r=await fetch("/chat",{
 method:"POST",
 headers:{"Content-Type":"application/json"},
-body:JSON.stringify({message:text})
+body: JSON.stringify({
+  user: CURRENT_USER,
+  message: text
+})
+
 });
 const d=await r.json();
 messages.lastChild.remove();
